--- a/forge-1.19.2/generator.yaml
+++ b/forge-1.19.2/generator.yaml
@@ -1,6 +1,7 @@
 name: Minecraft Forge for @minecraft (@buildfileversion)
 status: deprecated
 buildfileversion: 43.2.22
+subversion: 1.0.1
 
 import:
   - datapack-1.19.2
