--- a/forge-1.19.2/plant.definition.yaml
+++ b/forge-1.19.2/plant.definition.yaml
@@ -1,9 +1,6 @@
 templates:
   - template: plant/plant.java.ftl
     name: "@SRCROOT/@BASEPACKAGEPATH/block/@NAMEBlock.java"
-  - template: plant/plantgen.java.ftl
-    condition: doesGenerateInWorld()
-    name: "@SRCROOT/@BASEPACKAGEPATH/world/features/plants/@NAMEFeature.java"
   - template: plant/plantblockentity.java.ftl
     condition: hasTileEntity
     name: "@SRCROOT/@BASEPACKAGEPATH/block/entity/@NAMEBlockEntity.java"
@@ -65,7 +62,7 @@ templates:
 
   - template: json/block_feature_biome_modifier.json.ftl
     writer: json
-    condition: doesGenerateInWorld()
+    condition: generateFeature
     name: "@MODDATAROOT/forge/biome_modifier/@registryname_biome_modifier.json"
     variables: "step=vegetal_decoration"
 
