--- a/forge-1.19.2/block.definition.yaml
+++ b/forge-1.19.2/block.definition.yaml
@@ -6,6 +6,9 @@ templates:
     name: "@SRCROOT/@BASEPACKAGEPATH/block/entity/@NAMEBlockEntity.java"
 
   # Worldgen
+  - template: block/oregen.java.ftl
+    condition: generateFeature
+    name: "@SRCROOT/@BASEPACKAGEPATH/world/features/ores/@NAMEFeature.java"
   - template: json/block_feature_biome_modifier.json.ftl
     writer: json
     condition: generateFeature
