--- a/forge-1.19.2/plant.definition.yaml
+++ b/forge-1.19.2/plant.definition.yaml
@@ -1,6 +1,9 @@
 templates:
   - template: plant/plant.java.ftl
     name: "@SRCROOT/@BASEPACKAGEPATH/block/@NAMEBlock.java"
+  - template: plant/plantgen.java.ftl
+    condition: generateFeature
+    name: "@SRCROOT/@BASEPACKAGEPATH/world/features/plants/@NAMEFeature.java"
   - template: plant/plantblockentity.java.ftl
     condition: hasTileEntity
     name: "@SRCROOT/@BASEPACKAGEPATH/block/entity/@NAMEBlockEntity.java"
