Added some tree features

--- a/forge-1.19.2/mappings/features.yaml
+++ b/forge-1.19.2/mappings/features.yaml
@@ -94,3 +94,7 @@ feature_simple_random_selector:
   - SimpleRandomSelectorFeature
   - SimpleRandomFeatureConfiguration
   - "minecraft:simple_random_selector"
+feature_tree_simple:
+  - TreeFeature
+  - TreeConfiguration
+  - "minecraft:tree"
