--- a/forge-1.19.2/structure.definition.yaml
+++ b/forge-1.19.2/structure.definition.yaml
@@ -1,6 +1,10 @@
 templates:
-  - template: structure.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/world/features/@NAMEFeature.java"
-  - template: json/structure_feature_biome_modifier.json.ftl
+  - template: structure/structure_set.json.ftl # loaded from datapack generator
     writer: json
-    name: "@MODDATAROOT/forge/biome_modifier/@registryname_biome_modifier.json"
+    name: "@MODDATAROOT/worldgen/structure_set/@registryname.json"
+  - template: structure/structure.json.ftl # loaded from datapack generator
+    writer: json
+    name: "@MODDATAROOT/worldgen/structure/@registryname.json"
+  - template: structure/template_pool.json.ftl # loaded from datapack generator
+    writer: json
+    name: "@MODDATAROOT/worldgen/template_pool/@registryname.json"
