--- a/forge-1.19.2/generator.yaml
+++ b/forge-1.19.2/generator.yaml
@@ -60,7 +60,7 @@ base_templates:
     writer: file
     name: "@RESROOT/META-INF/accesstransformer.cfg"
     condition_any:
-      - ${"${w.getGElementsOfType('gamerule')?filter(e -> e.Number gt 0)?size != 0}" || "${w.getGElementsOfType('itemextension')?filter(e -> e.Logic gt 0)?size != 0}"}
+      - ${"${w.getGElementsOfType('gamerule')?filter(e -> e.Number gt 0)?size != 0}" || "${w.getGElementsOfType('gamerule')?filter(e -> e.Logic gt 0)?size != 0}"}
       - ${w.hasElementsOfType('dimension')}
       - ${w.hasElementsOfType('biome')}
       - ${w.hasElementsOfType('feature')}
