--- a/forge-1.19.2/plant.definition.yaml
+++ b/forge-1.19.2/plant.definition.yaml
@@ -1,17 +1,34 @@
 templates:
   - template: plant/plant.java.ftl
     name: "@SRCROOT/@BASEPACKAGEPATH/block/@NAMEBlock.java"
-  - template: plant/plantgen.java.ftl
-    condition: generateFeature
-    name: "@SRCROOT/@BASEPACKAGEPATH/world/features/plants/@NAMEFeature.java"
   - template: plant/plantblockentity.java.ftl
     condition: hasTileEntity
     name: "@SRCROOT/@BASEPACKAGEPATH/block/entity/@NAMEBlockEntity.java"
 
+  # Worldgen
+  - template: plant/plantgen.java.ftl
+    condition: generateFeature
+    name: "@SRCROOT/@BASEPACKAGEPATH/world/features/plants/@NAMEFeature.java"
+  - template: json/block_feature_biome_modifier.json.ftl
+    writer: json
+    condition: generateFeature
+    name: "@MODDATAROOT/forge/biome_modifier/@registryname_biome_modifier.json"
+    variables: "step=vegetal_decoration"
+  - template: plant/configured_plantgen.json.ftl
+    writer: json
+    condition: generateFeature
+    name: "@MODDATAROOT/worldgen/configured_feature/@registryname.json"
+  - template: plant/placed_plantgen.json.ftl
+    writer: json
+    condition: generateFeature
+    name: "@MODDATAROOT/worldgen/placed_feature/@registryname.json"
+
+  # Plant item template
   - template: json/plant_item.json.ftl
     writer: json
     name: "@MODASSETSROOT/models/item/@registryname.json"
 
+  # Block model templates
   - template: json/block.json.ftl
     condition: "renderType #= 12"
     writer: json
@@ -50,6 +67,7 @@ templates:
     variables: "model=tinted_cross"
     name: "@MODASSETSROOT/models/block/@registryname_bottom.json"
 
+  # Blockstate templates
   - template: json/block_states.json.ftl
     writer: json
     condition: "plantType %= normal"
@@ -62,12 +80,6 @@ templates:
     writer: json
     condition: "plantType %= double"
     name: "@MODASSETSROOT/blockstates/@registryname.json"
-
-  - template: json/block_feature_biome_modifier.json.ftl
-    writer: json
-    condition: generateFeature
-    name: "@MODDATAROOT/forge/biome_modifier/@registryname_biome_modifier.json"
-    variables: "step=vegetal_decoration"
 
 localizationkeys:
   - key: block.@modid.@registryname
