--- a/forge-1.19.2/mappings/damagesources.yaml
+++ b/forge-1.19.2/mappings/damagesources.yaml
@@ -1,4 +1,6 @@
 _default: DamageSource.GENERIC
+_mcreator_prefix: "CUSTOM:"
+_mcreator_map_template: "ResourceKey.create(new ResourceLocation(\"@modid:@registryname\"))"
 IN_FIRE: DamageSource.IN_FIRE
 LIGHTNING_BOLT: DamageSource.LIGHTNING_BOLT
 ON_FIRE: DamageSource.ON_FIRE
