--- a/datapack-1.19.2/mappings/particles.yaml
+++ b/datapack-1.19.2/mappings/particles.yaml
@@ -1,87 +1,259 @@
 _mcreator_prefix: "CUSTOM:"
-_mcreator_map_template: "(SimpleParticleType) (@JavaModNameParticleTypes.@REGISTRYNAME.get())"
-_default: ParticleTypes.CRIT
-SPELL_MOB_AMBIENT: ParticleTypes.AMBIENT_ENTITY_EFFECT
-VILLAGER_ANGRY: ParticleTypes.ANGRY_VILLAGER
-WATER_BUBBLE: ParticleTypes.BUBBLE
-CLOUD: ParticleTypes.CLOUD
-CRIT: ParticleTypes.CRIT
-DAMAGE_INDICATOR: ParticleTypes.DAMAGE_INDICATOR
-DRAGON_BREATH: ParticleTypes.DRAGON_BREATH
-DRIP_LAVA: ParticleTypes.DRIPPING_LAVA
-FALL_LAVA: ParticleTypes.FALLING_LAVA
-LAND_LAVA: ParticleTypes.LANDING_LAVA
-DRIP_WATER: ParticleTypes.DRIPPING_WATER
-WATER_DROP: ParticleTypes.FALLING_WATER
-SPELL: ParticleTypes.EFFECT
-ELDER_GUARDIAN: ParticleTypes.ELDER_GUARDIAN
-CRIT_MAGIC: ParticleTypes.ENCHANTED_HIT
-ENCHANTMENT_TABLE: ParticleTypes.ENCHANT
-END_ROD: ParticleTypes.END_ROD
-ENTITY_EFFECT: ParticleTypes.ENTITY_EFFECT
-EXPLOSION_EMITTER: ParticleTypes.EXPLOSION_EMITTER
-EXPLOSION_NORMAL: ParticleTypes.EXPLOSION
-FIREWORKS_SPARK: ParticleTypes.FIREWORK
-FISHING: ParticleTypes.FISHING
-FLAME: ParticleTypes.FLAME
-FLASH: ParticleTypes.FLASH
-VILLAGER_HAPPY: ParticleTypes.HAPPY_VILLAGER
-COMPOSTER: ParticleTypes.COMPOSTER
-HEART: ParticleTypes.HEART
-SPELL_INSTANT: ParticleTypes.INSTANT_EFFECT
-SLIME: ParticleTypes.ITEM_SLIME
-SNOWBALL: ParticleTypes.ITEM_SNOWBALL
-SMOKE_LARGE: ParticleTypes.LARGE_SMOKE
-LAVA: ParticleTypes.LAVA
-MYCELIUM: ParticleTypes.MYCELIUM
-NOTE: ParticleTypes.NOTE
-POOF: ParticleTypes.POOF
-PORTAL: ParticleTypes.PORTAL
-RAIN: ParticleTypes.RAIN
-SMOKE_NORMAL: ParticleTypes.SMOKE
-SNEEZE: ParticleTypes.SNEEZE
-SPIT: ParticleTypes.SPIT
-SQUID_INK: ParticleTypes.SQUID_INK
-SWEEP_ATTACK: ParticleTypes.SWEEP_ATTACK
-TOTEM: ParticleTypes.TOTEM_OF_UNDYING
-UNDERWATER: ParticleTypes.UNDERWATER
-WATER_SPLASH: ParticleTypes.SPLASH
-SPELL_WITCH: ParticleTypes.WITCH
-BUBBLE_POP: ParticleTypes.BUBBLE_POP
-CURRENT_DOWN: ParticleTypes.CURRENT_DOWN
-BUBBLE_COLUMN_UP: ParticleTypes.BUBBLE_COLUMN_UP
-NAUTILUS: ParticleTypes.NAUTILUS
-DOLPHIN: ParticleTypes.DOLPHIN
-CAMPFIRE_COSY_SMOKE: ParticleTypes.CAMPFIRE_COSY_SMOKE
-CAMPFIRE_SIGNAL_SMOKE: ParticleTypes.CAMPFIRE_SIGNAL_SMOKE
-DRIPPING_HONEY: ParticleTypes.DRIPPING_HONEY
-FALLING_HONEY: ParticleTypes.FALLING_HONEY
-LANDING_HONEY: ParticleTypes.LANDING_HONEY
-FALLING_NECTAR: ParticleTypes.FALLING_NECTAR
-FALLING_SPORE_BLOSSOM: ParticleTypes.FALLING_SPORE_BLOSSOM
-SOUL_FIRE_FLAME: ParticleTypes.SOUL_FIRE_FLAME
-SOUL: ParticleTypes.SOUL
-ASH: ParticleTypes.ASH
-CRIMSON_SPORE: ParticleTypes.CRIMSON_SPORE
-WARPED_SPORE: ParticleTypes.WARPED_SPORE
-SPORE_BLOSSOM_AIR: ParticleTypes.SPORE_BLOSSOM_AIR
-DRIPPING_OBSIDIAN_TEAR: ParticleTypes.DRIPPING_OBSIDIAN_TEAR
-FALLING_OBSIDIAN_TEAR: ParticleTypes.FALLING_OBSIDIAN_TEAR
-LANDING_OBSIDIAN_TEAR: ParticleTypes.LANDING_OBSIDIAN_TEAR
-REVERSE_PORTAL: ParticleTypes.REVERSE_PORTAL
-WHITE_ASH: ParticleTypes.WHITE_ASH
-SMALL_FLAME: ParticleTypes.SMALL_FLAME
-SNOWFLAKE: ParticleTypes.SNOWFLAKE
-DRIPPING_DRIPSTONE_LAVA: ParticleTypes.DRIPPING_DRIPSTONE_LAVA
-FALLING_DRIPSTONE_LAVA: ParticleTypes.FALLING_DRIPSTONE_LAVA
-DRIPPING_DRIPSTONE_WATER: ParticleTypes.DRIPPING_DRIPSTONE_WATER
-FALLING_DRIPSTONE_WATER: ParticleTypes.FALLING_DRIPSTONE_WATER
-GLOW_SQUID_INK: ParticleTypes.GLOW_SQUID_INK
-GLOW: ParticleTypes.GLOW
-WAX_ON: ParticleTypes.WAX_ON
-WAX_OFF: ParticleTypes.WAX_OFF
-ELECTRIC_SPARK: ParticleTypes.ELECTRIC_SPARK
-SCRAPE: ParticleTypes.SCRAPE
-SCULK_SOUL: ParticleTypes.SCULK_SOUL
-SCULK_CHARGE_POP: ParticleTypes.SCULK_CHARGE_POP
-SONIC_BOOM: ParticleTypes.SONIC_BOOM
+_mcreator_map_template:
+  - "(SimpleParticleType) (@JavaModNameParticleTypes.@REGISTRYNAME.get())"
+  - "@modid:@registryname"
+_default:
+  - ParticleTypes.CRIT
+  - "crit"
+SPELL_MOB_AMBIENT:
+  - ParticleTypes.AMBIENT_ENTITY_EFFECT
+  - "ambient_entity_effect"
+VILLAGER_ANGRY:
+  - ParticleTypes.ANGRY_VILLAGER
+  - "angry_villager"
+WATER_BUBBLE:
+  - ParticleTypes.BUBBLE
+  - "bubble"
+CLOUD:
+  - ParticleTypes.CLOUD
+  - "cloud"
+CRIT:
+  - ParticleTypes.CRIT
+  - "crit"
+DAMAGE_INDICATOR:
+  - ParticleTypes.DAMAGE_INDICATOR
+  - "damage_indicator"
+DRAGON_BREATH:
+  - ParticleTypes.DRAGON_BREATH
+  - "dragon_breath"
+DRIP_LAVA:
+  - ParticleTypes.DRIPPING_LAVA
+  - "dripping_lava"
+FALL_LAVA:
+  - ParticleTypes.FALLING_LAVA
+  - "falling_lava"
+LAND_LAVA:
+  - ParticleTypes.LANDING_LAVA
+  - "landing_lava"
+DRIP_WATER:
+  - ParticleTypes.DRIPPING_WATER
+  - "dripping_water"
+WATER_DROP:
+  - ParticleTypes.FALLING_WATER
+  - "falling_water"
+SPELL:
+  - ParticleTypes.EFFECT
+  - "effect"
+ELDER_GUARDIAN:
+  - ParticleTypes.ELDER_GUARDIAN
+  - "elder_guardian"
+CRIT_MAGIC:
+  - ParticleTypes.ENCHANTED_HIT
+  - "enchanted_hit"
+ENCHANTMENT_TABLE:
+  - ParticleTypes.ENCHANT
+  - "enchant"
+END_ROD:
+  - ParticleTypes.END_ROD
+  - "end_rod"
+ENTITY_EFFECT:
+  - ParticleTypes.ENTITY_EFFECT
+  - "entity_effect"
+EXPLOSION_EMITTER:
+  - ParticleTypes.EXPLOSION_EMITTER
+  - "explosion_emitter"
+EXPLOSION_NORMAL:
+  - ParticleTypes.EXPLOSION
+  - "explosion"
+FIREWORKS_SPARK:
+  - ParticleTypes.FIREWORK
+  - "firework"
+FISHING:
+  - ParticleTypes.FISHING
+  - "fishing"
+FLAME:
+  - ParticleTypes.FLAME
+  - "flame"
+FLASH:
+  - ParticleTypes.FLASH
+  - "flash"
+VILLAGER_HAPPY:
+  - ParticleTypes.HAPPY_VILLAGER
+  - "happy_villager"
+COMPOSTER:
+  - ParticleTypes.COMPOSTER
+  - "composter"
+HEART:
+  - ParticleTypes.HEART
+  - "heart"
+SPELL_INSTANT:
+  - ParticleTypes.INSTANT_EFFECT
+  - "instant_effect"
+SLIME:
+  - ParticleTypes.ITEM_SLIME
+  - "item_slime"
+SNOWBALL:
+  - ParticleTypes.ITEM_SNOWBALL
+  - "item_snowball"
+SMOKE_LARGE:
+  - ParticleTypes.LARGE_SMOKE
+  - "large_smoke"
+LAVA:
+  - ParticleTypes.LAVA
+  - "lava"
+MYCELIUM:
+  - ParticleTypes.MYCELIUM
+  - "mycelium"
+NOTE:
+  - ParticleTypes.NOTE
+  - "note"
+POOF:
+  - ParticleTypes.POOF
+  - "poof"
+PORTAL:
+  - ParticleTypes.PORTAL
+  - "portal"
+RAIN:
+  - ParticleTypes.RAIN
+  - "rain"
+SMOKE_NORMAL:
+  - ParticleTypes.SMOKE
+  - "smoke"
+SNEEZE:
+  - ParticleTypes.SNEEZE
+  - "sneeze"
+SPIT:
+  - ParticleTypes.SPIT
+  - "spit"
+SQUID_INK:
+  - ParticleTypes.SQUID_INK
+  - "squid_ink"
+SWEEP_ATTACK:
+  - ParticleTypes.SWEEP_ATTACK
+  - "sweep_attack"
+TOTEM:
+  - ParticleTypes.TOTEM_OF_UNDYING
+  - "totem_of_undying"
+UNDERWATER:
+  - ParticleTypes.UNDERWATER
+  - "underwater"
+WATER_SPLASH:
+  - ParticleTypes.SPLASH
+  - "splash"
+SPELL_WITCH:
+  - ParticleTypes.WITCH
+  - "witch"
+BUBBLE_POP:
+  - ParticleTypes.BUBBLE_POP
+  - "bubble_pop"
+CURRENT_DOWN:
+  - ParticleTypes.CURRENT_DOWN
+  - "current_down"
+BUBBLE_COLUMN_UP:
+  - ParticleTypes.BUBBLE_COLUMN_UP
+  - "bubble_column_up"
+NAUTILUS:
+  - ParticleTypes.NAUTILUS
+  - "nautilus"
+DOLPHIN:
+  - ParticleTypes.DOLPHIN
+  - "dolphin"
+CAMPFIRE_COSY_SMOKE:
+  - ParticleTypes.CAMPFIRE_COSY_SMOKE
+  - "campfire_cosy_smoke"
+CAMPFIRE_SIGNAL_SMOKE:
+  - ParticleTypes.CAMPFIRE_SIGNAL_SMOKE
+  - "campfire_signal_smoke"
+DRIPPING_HONEY:
+  - ParticleTypes.DRIPPING_HONEY
+  - "dripping_honey"
+FALLING_HONEY:
+  - ParticleTypes.FALLING_HONEY
+  - "falling_honey"
+LANDING_HONEY:
+  - ParticleTypes.LANDING_HONEY
+  - "landing_honey"
+FALLING_NECTAR:
+  - ParticleTypes.FALLING_NECTAR
+  - "falling_nectar"
+FALLING_SPORE_BLOSSOM:
+  - ParticleTypes.FALLING_SPORE_BLOSSOM
+  - "falling_spore_blossom"
+SOUL_FIRE_FLAME:
+  - ParticleTypes.SOUL_FIRE_FLAME
+  - "soul_fire_flame"
+SOUL:
+  - ParticleTypes.SOUL
+  - "soul"
+ASH:
+  - ParticleTypes.ASH
+  - "ash"
+CRIMSON_SPORE:
+  - ParticleTypes.CRIMSON_SPORE
+  - "crimson_spore"
+WARPED_SPORE:
+  - ParticleTypes.WARPED_SPORE
+  - "warped_spore"
+SPORE_BLOSSOM_AIR:
+  - ParticleTypes.SPORE_BLOSSOM_AIR
+  - "spore_blossom_air"
+DRIPPING_OBSIDIAN_TEAR:
+  - ParticleTypes.DRIPPING_OBSIDIAN_TEAR
+  - "dripping_obsidian_tear"
+FALLING_OBSIDIAN_TEAR:
+  - ParticleTypes.FALLING_OBSIDIAN_TEAR
+  - "falling_obsidian_tear"
+LANDING_OBSIDIAN_TEAR:
+  - ParticleTypes.LANDING_OBSIDIAN_TEAR
+  - "landing_obsidian_tear"
+REVERSE_PORTAL:
+  - ParticleTypes.REVERSE_PORTAL
+  - "reverse_portal"
+WHITE_ASH:
+  - ParticleTypes.WHITE_ASH
+  - "white_ash"
+SMALL_FLAME:
+  - ParticleTypes.SMALL_FLAME
+  - "small_flame"
+SNOWFLAKE:
+  - ParticleTypes.SNOWFLAKE
+  - "snowflake"
+DRIPPING_DRIPSTONE_LAVA:
+  - ParticleTypes.DRIPPING_DRIPSTONE_LAVA
+  - "dripping_dripstone_lava"
+FALLING_DRIPSTONE_LAVA:
+  - ParticleTypes.FALLING_DRIPSTONE_LAVA
+  - "falling_dripstone_lava"
+DRIPPING_DRIPSTONE_WATER:
+  - ParticleTypes.DRIPPING_DRIPSTONE_WATER
+  - "dripping_dripstone_water"
+FALLING_DRIPSTONE_WATER:
+  - ParticleTypes.FALLING_DRIPSTONE_WATER
+  - "falling_dripstone_water"
+GLOW_SQUID_INK:
+  - ParticleTypes.GLOW_SQUID_INK
+  - "glow_squid_ink"
+GLOW:
+  - ParticleTypes.GLOW
+  - "glow"
+WAX_ON:
+  - ParticleTypes.WAX_ON
+  - "wax_on"
+WAX_OFF:
+  - ParticleTypes.WAX_OFF
+  - "wax_off"
+ELECTRIC_SPARK:
+  - ParticleTypes.ELECTRIC_SPARK
+  - "electric_spark"
+SCRAPE:
+  - ParticleTypes.SCRAPE
+  - "scrape"
+SCULK_SOUL:
+  - ParticleTypes.SCULK_SOUL
+  - "sculk_soul"
+SCULK_CHARGE_POP:
+  - ParticleTypes.SCULK_CHARGE_POP
+  - "sculk_charge_pop"
+SONIC_BOOM:
+  - ParticleTypes.SONIC_BOOM
+  - "sonic_boom"
